--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -9,18 +9,18 @@
     <div class="item item-text-wrap">
         <div class="list">
   <label class="item item-input item-stacked-label">
-    <span class="input-label">User Name</span>
-    <input type="text" placeholder="username" ng-model="createSo.notes">
+    <span class="input-label">email</span>
+    <input type="text" placeholder="username" ng-model="user.email">
   </label>
             <label class="item item-input item-stacked-label">
      <span  class="input-label">Password</span>
-     <input type="text" placeholder="Enter password here">  
+     <input type="password" placeholder="Enter password here" ng-model="user.password">  
   </label>
         </div>
     </div>
 </div>
-<button class="button button-block button-positive">
-  Create Sales Order
+<button class="button button-block button-positive" ng-click="login(user)">
+Sign In
 </button>
     </ion-content>
 </ion-view>
