--- a/www/templates/obDetail.html
+++ b/www/templates/obDetail.html
@@ -1,36 +1,34 @@
 <ion-view>
-<ion-header-bar class="bar-dark">
-<button class="button " ui-sref="home"><i class="ion-chevron-left"></i></button>    
-    <h1 class="title">Cinder</h1>
-    <button class="button">Edit</button>
-</ion-header-bar>
+    <ion-header-bar class="bar-dark">
+        <button class="button" ui-sref="home"><i class="ion-chevron-left"></i></button>
+        <h1 class="title">Cinder</h1>
+        <button class="button" ng-click="openModal()">Edit</button>
+    </ion-header-bar>
     <ion-content>
-<div class="list card">
-    <div class="item ob-detail-header" >
-        <span>{{detailSo.id}}</span>  <span>{{detailSo.customer}}</span> <i class="icon" ng-class="{'fa fa-truck' : detailSo.type === 1, 'fa fa-building' : detailSo.type === 2}" aria-hidden="true"></i>
-    </div>
-    <div class="item item-body item-icon-right">
-        <h2>Schedule date:</h2>
-        <p>{{detailSo.date}}
-    </div>
+        <div class="list card">
+            <div class="item ob-detail-header">
+                <span>{{detailSo.id}}</span> <span>{{detailSo.customer}}</span> <i class="icon" ng-class="{'fa fa-truck' : detailSo.type === 1, 'fa fa-building' : detailSo.type === 2}"
+                    aria-hidden="true"></i>
+            </div>
+            <div class="item item-body item-icon-right">
+                <h2>Schedule date:</h2>
+                <p>{{detailSo.date}}
+            </div>
 
-    <div class="item item-body item-icon-right">
-        <h2>Order Description:</h2>
-        <p>{{detailSo.order_desc}}</p>
-    </div>
-    <div class="item item-body item-icon-right">
-        <h2>Notes:</h2>
-        <p>{{detailSo.notes}}</p>
-    </div>
-
-</div>
-         
-            <button class="button button-block button-balanced" ng-click="prep(detailSo.id)">
+            <div class="item item-body item-icon-right">
+                <h2>Order Description:</h2>
+                <p>{{detailSo.order_desc}}</p>
+            </div>
+            <div class="item item-body item-icon-right">
+                <h2>Notes:</h2>
+                <p>{{detailSo.notes}}</p>
+            </div>
+        </div>
+        <button class="button button-block button-balanced" ng-click="prep(detailSo.id)">
                 Mark As Prepared
             </button>
-            <button class="button button-block button-positive" ng-click="complete(detailSo.id)">
+        <button class="button button-block button-positive" ng-click="complete(detailSo.id)">
                 Complete
             </button>
-
     </ion-content>
 </ion-view>
