added display history function and history table

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -16,6 +16,10 @@ ob-desc p {
   text-align: center;
 }
 
+.bold {
+  font-weight: 900
+}
+
 .isPrepared {
   background-color: mediumspringgreen;
 }
