--- a/www/templates/createSo.html
+++ b/www/templates/createSo.html
@@ -1,17 +1,17 @@
 <ion-view>
-    <ion-header-bar class="bar-dark">
-      <button class="button " ui-sref="home"><i class="ion-chevron-left"></i></button>   
-            <h1 class="title">Cinder</h1>
-        </ion-header-bar>
-    <ion-content>
-<!--<div class="list">
- <label class="item item-input item-select">
+  <ion-header-bar class="bar-dark">
+    <button class="button " ui-sref="home"><i class="ion-chevron-left"></i></button>
+    <h1 class="title">Cinder</h1>
+  </ion-header-bar>
+  <ion-content>
+    <div class="list">
+      <label class="item item-input item-select">
     <div class="input-label">
       Customer
     </div>
     <select ng-model="createSo.customer_id" ng-options="customer.company_name for customer in customers track by customer.id"></select>
   </label>
-   <label class="item item-input item-select">
+      <label class="item item-input item-select">
     <div class="input-label">
       Type
     </div>
@@ -20,23 +20,23 @@
       <option value="2" selected>Pick Up</option>
     </select>
   </label>
-    <label class="item item-input item-stacked-label">
+      <label class="item item-input item-stacked-label">
     <span class="input-label">Order Description</span>
     <input type="text" placeholder="Add order description here" ng-model="createSo.sales_order_desc">
   </label>
-    <label class="item item-input item-stacked-label">
+      <label class="item item-input item-stacked-label">
     <span class="input-label">Notes</span>
     <input type="text" placeholder="Add notes here" ng-model="createSo.notes">
   </label>
-  <label class="item item-input item-stacked-label">
-     <span ng-model="createSo.scheduled_date" class="input-label">Scheduled Date</span>
-    <input type="date" name="bday">
+      <label class="item item-input item-stacked-label soDatePicker">
+     <span  class="input-label">Scheduled Date</span>
+    <input ng-model="createSo.date" type="date">
     
   </label>
-</div>
-<button class="button button-block button-positive" ng-click="createSalesOrder(createSo)">
+    </div>
+    <button class="button button-block button-positive" ng-click="createSalesOrder(createSo)">
   Create Sales Order
-</button>-->
-<create-so></create-so>
-    </ion-content>
+</button>
+
+  </ion-content>
 </ion-view>
