added customer views

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,7 +1,7 @@
 <ion-view>
     <ion-header-bar class="bar-dark">
-        <button class="button icon ion-navicon" ng-click='logout()'></button>
-        <h1 class="title">Cinder</h1>
+        <button class="button icon ion-log-out" ng-click='logout()'></button>
+        <h1 class="title center-text">Cinder</h1>
         <button class="button " ui-sref="createSo"><i class="icon ion-plus"></i></button>
     </ion-header-bar>
     <ion-content>
@@ -28,6 +28,9 @@
   </a>
   <a class="tab-item" ui-sref="purchase">
     Purchase Orders
+  </a>
+   <a class="tab-item" ui-sref="customers">
+    Customers
   </a>
 </div>
 </ion-view>
