--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,6 +1,6 @@
 <ion-view>
 <ion-header-bar class="bar-dark">
-    <h1 class="title">Cinder</h1>
+    <h1 class="title center-text">Cinder</h1>
 </ion-header-bar>
     <ion-content>
 
